--- a/department-service.properties
+++ b/department-service.properties
@@ -1,6 +1,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/department_db
-spring.datasource.username=root spring.datasource.password=root 
+spring.datasource.username=root
+spring.datasource.password=root 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect 
 spring.jpa.hibernate.ddl-auto=update #spring.rabbitmq.host=localhost
 #spring.rabbitmq.port=5672 #spring.rabbitmq.username=guest #spring.rabbitmq.password=guest 
