--- a/department-service.properties
+++ b/department-service.properties
@@ -2,8 +2,9 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/department_db
 spring.datasource.username=root
 spring.datasource.password=root 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect 
-spring.jpa.hibernate.ddl-auto=update #spring.rabbitmq.host=localhost
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect 
+spring.jpa.hibernate.ddl-auto=update
+#spring.rabbitmq.host=localhost
 #spring.rabbitmq.port=5672 #spring.rabbitmq.username=guest #spring.rabbitmq.password=guest 
 #spring.config.import=optional:configserver:http://localhost:8888 
 management.endpoints.web.exposure.include=*
